--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,9 @@ psycopg2-binary==2.9.10
 sqlparse==0.5.3
 asgiref==3.8.1
 
+# === DEPLOYMENT ===
+gunicorn==21.2.0
+
 # === TEMPLATING & FORMS ===
 Jinja2==3.1.6
 MarkupSafe==3.0.2
