Tested Docker security, verified /etc access & code_exec perms

--- a/docker_runner/Dockerfile
+++ b/docker_runner/Dockerfile
@@ -1,5 +1,4 @@
 FROM ubuntu:24.04
-
 ENV DEBIAN_FRONTEND=noninteractive
 
 RUN apt update && apt install -y \
@@ -13,7 +12,8 @@ RUN apt update && apt install -y \
     curl \
     && apt clean
 
+RUN mkdir -p /scripts && chmod 755 /scripts
 COPY run_code.sh /scripts/run_code.sh
-RUN chmod +x /scripts/run_code.sh
 
+# DO NOT 777 /runner, let docker control perms securely
 WORKDIR /runner
